--- a/datalab/Untitled Notebook.ipynb
+++ b/datalab/Untitled Notebook.ipynb
@@ -43,6 +43,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AccessTokenInfo(access_token=u'ya29.CkLoAmMUyFSONlvW1U9ma_CqNd_zMUqtSP5PsTJCJNQ2cDPK3dopCGjtJIb8PVv_O3wovO2J9QOdujvGjAaZY-v8Qyk', expires_in=None)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context.credentials.get_access_token()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "complete-galaxy-645@appspot.gserviceaccount.com"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "curl --silent -H \"Metadata-Flavor: Google\" \\\n",
+    "  http://metadata/computeMetadata/v1/instance/service-accounts/default/email"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
