--- a/datalab/Untitled Notebook.ipynb
+++ b/datalab/Untitled Notebook.ipynb
@@ -86,6 +86,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"1_146375654113\"><table><tr><th>title</th><th>revisions</th></tr><tr><td>George W. Bush</td><td>43652</td></tr><tr><td>List of World Wrestling Entertainment employees</td><td>30572</td></tr><tr><td>Wikipedia</td><td>29726</td></tr><tr><td>United States</td><td>27432</td></tr><tr><td>Michael Jackson</td><td>23245</td></tr><tr><td>Jesus</td><td>21768</td></tr><tr><td>Deaths in 2009</td><td>20814</td></tr><tr><td>World War II</td><td>20546</td></tr><tr><td>Britney Spears</td><td>20529</td></tr><tr><td>Wii</td><td>20225</td></tr></table></div>\n",
+       "    <br />(rows: 10, time: 6.6s,     9GB processed, job: job_rD_vqx9D3jwVKp9e0geeFO-EWQo)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!1_146375654113', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"table\",\n",
+       "              dataName:\"0\",\n",
+       "              fields:\"title,revisions\",\n",
+       "              totalRows:10,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"George W. Bush\"}, {\"v\": 43652}]}, {\"c\": [{\"v\": \"List of World Wrestling Entertainment employees\"}, {\"v\": 30572}]}, {\"c\": [{\"v\": \"Wikipedia\"}, {\"v\": 29726}]}, {\"c\": [{\"v\": \"United States\"}, {\"v\": 27432}]}, {\"c\": [{\"v\": \"Michael Jackson\"}, {\"v\": 23245}]}, {\"c\": [{\"v\": \"Jesus\"}, {\"v\": 21768}]}, {\"c\": [{\"v\": \"Deaths in 2009\"}, {\"v\": 20814}]}, {\"c\": [{\"v\": \"World War II\"}, {\"v\": 20546}]}, {\"c\": [{\"v\": \"Britney Spears\"}, {\"v\": 20529}]}, {\"c\": [{\"v\": \"Wii\"}, {\"v\": 20225}]}], \"cols\": [{\"type\": \"string\", \"id\": \"title\", \"label\": \"title\"}, {\"type\": \"number\", \"id\": \"revisions\", \"label\": \"revisions\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "QueryResultsTable job_rD_vqx9D3jwVKp9e0geeFO-EWQo"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT TOP(title, 10) as title, COUNT(*) as revisions\n",
+    "FROM [publicdata:samples.wikipedia]\n",
+    "WHERE wp_namespace = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
