--- a/datalab/Getting Started.ipynb
+++ b/datalab/Getting Started.ipynb
@@ -179,7 +179,23 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%sql --module requests\n",
+    "SELECT timestamp, latency, endpoint\n",
+    "FROM [cloud-datalab-samples:httplogs.logs_20140615]\n",
+    "WHERE endpoint = 'Popular' OR endpoint = 'Recent'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = bq.Query(requests).to_dataframe()"
+   ]
   }
  ],
  "metadata": {
