--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -40,7 +40,6 @@
    ],
    "source": [
     "%%sql\n",
-    "\n",
     "SELECT * FROM [google.com:ddm-connectors-demo:aw_dataset.__TABLES__];"
    ]
   },
@@ -64,8 +63,23 @@
    },
    "outputs": [],
    "source": [
-    "%%sql --module account_device\n",
-    "SELE"
+    "%%sql\n",
+    "SELECT \n",
+    "  AccountCurrencyCode,\n",
+    "  AccountDescri\n",
+    "FROM \n",
+    "  [google.com:ddm-connectors-demo:aw_dataset.ACCOUNT_PERFROMANCE_DEVICE];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%sql module"
    ]
   }
  ],
