--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -57,18 +57,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Field 'AccountDescri' not found in table 'google.com:ddm-connectors-demo:aw_dataset.ACCOUNT_PERFORMANCE_HOUR_OF_DAY'.\n"
+     ]
+    }
+   ],
    "source": [
     "%%sql\n",
     "SELECT \n",
     "  AccountCurrencyCode,\n",
     "  AccountDescri\n",
     "FROM \n",
-    "  [google.com:ddm-connectors-demo:aw_dataset.ACCOUNT_PERFROMANCE_DEVICE];"
+    "  [google.com:ddm-connectors-demo:aw_dataset.ACCOUNT_PERFORMANCE_HOUR_OF_DAY];"
    ]
   },
   {
