--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -57,26 +57,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Field 'AccountDescri' not found in table 'google.com:ddm-connectors-demo:aw_dataset.ACCOUNT_PERFORMANCE_HOUR_OF_DAY'.\n"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"3_146416828384\"><table><tr><th>AccountCurrencyCode</th><th>AccountDescriptiveName</th></tr><tr><td>GBP</td><td>Google - Youtube</td></tr><tr><td>GBP</td><td>Hotels - London</td></tr><tr><td>EUR</td><td>lastminute.com HOTEL EUROPA</td></tr><tr><td>EUR</td><td>lastminute.com HOTEL GENERICHE</td></tr><tr><td>EUR</td><td>Google - BRG - IT - DP</td></tr><tr><td>EUR</td><td>LMN Selfcat 1</td></tr><tr><td>GBP</td><td>Hotels – UK 2</td></tr><tr><td>GBP</td><td>Hotel Names – Worldwide</td></tr><tr><td>EUR</td><td>Download app</td></tr><tr><td>EUR</td><td>Volagratis Hotel</td></tr><tr><td>GBP</td><td>Hotel Names 1</td></tr><tr><td>EUR</td><td>SRC_Lastminute_Hotel_Longtail</td></tr><tr><td>GBP</td><td>Days Out</td></tr><tr><td>GBP</td><td>Hotels – Europe 3</td></tr><tr><td>EUR</td><td>BRG - ES - DP</td></tr><tr><td>GBP</td><td>Hotels – UK</td></tr><tr><td>EUR</td><td>BravoFly DE 2009</td></tr><tr><td>EUR</td><td>lastminute+HOLI-lastminute</td></tr><tr><td>EUR</td><td>lastminute.com VOLI</td></tr><tr><td>GBP</td><td>Google - DP 1 - LMN - UK</td></tr><tr><td>EUR</td><td>BravoFly FR 2009</td></tr><tr><td>EUR</td><td>Rumbo Trenes</td></tr><tr><td>EUR</td><td>Volagratis Tratte Italia</td></tr><tr><td>EUR</td><td>Bravofly Spagna</td></tr><tr><td>GBP</td><td>Hotels - Brand</td></tr></table></div>\n",
+       "    <br />(rows: 147, time: 1.6s,     8MB processed, job: job_ec8Wh6csYUbXdacFH_bLqCiCKIg)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!3_146416828384', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"paged_table\",\n",
+       "              dataName:\"2\",\n",
+       "              fields:\"AccountCurrencyCode,AccountDescriptiveName\",\n",
+       "              totalRows:147,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Google - Youtube\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotels - London\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"lastminute.com HOTEL EUROPA\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"lastminute.com HOTEL GENERICHE\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Google - BRG - IT - DP\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"LMN Selfcat 1\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotels \\u2013 UK 2\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotel Names \\u2013 Worldwide\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Download app\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Volagratis Hotel\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotel Names 1\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"SRC_Lastminute_Hotel_Longtail\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Days Out\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotels \\u2013 Europe 3\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"BRG - ES - DP\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotels \\u2013 UK\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"BravoFly DE 2009\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"lastminute+HOLI-lastminute\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"lastminute.com VOLI\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Google - DP 1 - LMN - UK\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"BravoFly FR 2009\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Rumbo Trenes\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Volagratis Tratte Italia\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Bravofly Spagna\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotels - Brand\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"AccountCurrencyCode\", \"label\": \"AccountCurrencyCode\"}, {\"type\": \"string\", \"id\": \"AccountDescriptiveName\", \"label\": \"AccountDescriptiveName\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "QueryResultsTable job_ec8Wh6csYUbXdacFH_bLqCiCKIg"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
     "SELECT \n",
     "  AccountCurrencyCode,\n",
-    "  AccountDescri\n",
+    "  AccountDescriptiveName,\n",
     "FROM \n",
-    "  [google.com:ddm-connectors-demo:aw_dataset.ACCOUNT_PERFORMANCE_HOUR_OF_DAY];"
+    "  [google.com:ddm-connectors-demo:aw_dataset.ACCOUNT_PERFORMANCE_DEVICE]\n",
+    "GROUP BY 1,2;"
    ]
   },
   {
