--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -121,26 +121,408 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'drop_duplicate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-2e0768f492f8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Date'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Week'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop_duplicate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/pandas/core/generic.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   2667\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2668\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2669\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2670\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2671\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'drop_duplicate'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8421</th>\n",
+       "      <td>2016-04-30</td>\n",
+       "      <td>2016-04-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8419</th>\n",
+       "      <td>2016-04-29</td>\n",
+       "      <td>2016-04-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8439</th>\n",
+       "      <td>2016-04-28</td>\n",
+       "      <td>2016-04-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8420</th>\n",
+       "      <td>2016-04-27</td>\n",
+       "      <td>2016-04-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8454</th>\n",
+       "      <td>2016-04-26</td>\n",
+       "      <td>2016-04-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8425</th>\n",
+       "      <td>2016-04-25</td>\n",
+       "      <td>2016-04-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8423</th>\n",
+       "      <td>2016-04-24</td>\n",
+       "      <td>2016-04-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8422</th>\n",
+       "      <td>2016-04-23</td>\n",
+       "      <td>2016-04-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8373</th>\n",
+       "      <td>2016-04-22</td>\n",
+       "      <td>2016-04-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8371</th>\n",
+       "      <td>2016-04-21</td>\n",
+       "      <td>2016-04-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8377</th>\n",
+       "      <td>2016-04-20</td>\n",
+       "      <td>2016-04-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8394</th>\n",
+       "      <td>2016-04-19</td>\n",
+       "      <td>2016-04-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8375</th>\n",
+       "      <td>2016-04-18</td>\n",
+       "      <td>2016-04-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8387</th>\n",
+       "      <td>2016-04-17</td>\n",
+       "      <td>2016-04-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8382</th>\n",
+       "      <td>2016-04-16</td>\n",
+       "      <td>2016-04-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8380</th>\n",
+       "      <td>2016-04-15</td>\n",
+       "      <td>2016-04-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>2016-04-14</td>\n",
+       "      <td>2016-04-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>352</th>\n",
+       "      <td>2016-04-13</td>\n",
+       "      <td>2016-04-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>2016-04-12</td>\n",
+       "      <td>2016-04-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366</th>\n",
+       "      <td>2016-04-11</td>\n",
+       "      <td>2016-04-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>2016-04-10</td>\n",
+       "      <td>2016-04-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356</th>\n",
+       "      <td>2016-04-09</td>\n",
+       "      <td>2016-04-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>2016-04-08</td>\n",
+       "      <td>2016-04-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>2016-04-07</td>\n",
+       "      <td>2016-04-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>294</th>\n",
+       "      <td>2016-04-06</td>\n",
+       "      <td>2016-04-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>283</th>\n",
+       "      <td>2016-04-05</td>\n",
+       "      <td>2016-04-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281</th>\n",
+       "      <td>2016-04-04</td>\n",
+       "      <td>2016-04-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>2016-04-03</td>\n",
+       "      <td>2016-03-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>2016-04-02</td>\n",
+       "      <td>2016-03-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td>2016-04-01</td>\n",
+       "      <td>2016-03-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1741</th>\n",
+       "      <td>2015-01-30</td>\n",
+       "      <td>2015-01-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1747</th>\n",
+       "      <td>2015-01-29</td>\n",
+       "      <td>2015-01-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1746</th>\n",
+       "      <td>2015-01-28</td>\n",
+       "      <td>2015-01-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1754</th>\n",
+       "      <td>2015-01-27</td>\n",
+       "      <td>2015-01-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1738</th>\n",
+       "      <td>2015-01-26</td>\n",
+       "      <td>2015-01-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1743</th>\n",
+       "      <td>2015-01-25</td>\n",
+       "      <td>2015-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1737</th>\n",
+       "      <td>2015-01-24</td>\n",
+       "      <td>2015-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1745</th>\n",
+       "      <td>2015-01-23</td>\n",
+       "      <td>2015-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1667</th>\n",
+       "      <td>2015-01-22</td>\n",
+       "      <td>2015-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1673</th>\n",
+       "      <td>2015-01-21</td>\n",
+       "      <td>2015-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1661</th>\n",
+       "      <td>2015-01-20</td>\n",
+       "      <td>2015-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1658</th>\n",
+       "      <td>2015-01-19</td>\n",
+       "      <td>2015-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1659</th>\n",
+       "      <td>2015-01-18</td>\n",
+       "      <td>2015-01-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1665</th>\n",
+       "      <td>2015-01-17</td>\n",
+       "      <td>2015-01-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1662</th>\n",
+       "      <td>2015-01-16</td>\n",
+       "      <td>2015-01-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1682</th>\n",
+       "      <td>2015-01-15</td>\n",
+       "      <td>2015-01-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1592</th>\n",
+       "      <td>2015-01-14</td>\n",
+       "      <td>2015-01-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1596</th>\n",
+       "      <td>2015-01-13</td>\n",
+       "      <td>2015-01-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1594</th>\n",
+       "      <td>2015-01-12</td>\n",
+       "      <td>2015-01-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1590</th>\n",
+       "      <td>2015-01-11</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1599</th>\n",
+       "      <td>2015-01-10</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1591</th>\n",
+       "      <td>2015-01-09</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1603</th>\n",
+       "      <td>2015-01-08</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1526</th>\n",
+       "      <td>2015-01-07</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1532</th>\n",
+       "      <td>2015-01-06</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1540</th>\n",
+       "      <td>2015-01-05</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1525</th>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>2014-12-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523</th>\n",
+       "      <td>2015-01-03</td>\n",
+       "      <td>2014-12-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1524</th>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>2014-12-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1527</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2014-12-29</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>486 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date        Week\n",
+       "8421  2016-04-30  2016-04-25\n",
+       "8419  2016-04-29  2016-04-25\n",
+       "8439  2016-04-28  2016-04-25\n",
+       "8420  2016-04-27  2016-04-25\n",
+       "8454  2016-04-26  2016-04-25\n",
+       "8425  2016-04-25  2016-04-25\n",
+       "8423  2016-04-24  2016-04-18\n",
+       "8422  2016-04-23  2016-04-18\n",
+       "8373  2016-04-22  2016-04-18\n",
+       "8371  2016-04-21  2016-04-18\n",
+       "8377  2016-04-20  2016-04-18\n",
+       "8394  2016-04-19  2016-04-18\n",
+       "8375  2016-04-18  2016-04-18\n",
+       "8387  2016-04-17  2016-04-11\n",
+       "8382  2016-04-16  2016-04-11\n",
+       "8380  2016-04-15  2016-04-11\n",
+       "349   2016-04-14  2016-04-11\n",
+       "352   2016-04-13  2016-04-11\n",
+       "362   2016-04-12  2016-04-11\n",
+       "366   2016-04-11  2016-04-11\n",
+       "355   2016-04-10  2016-04-04\n",
+       "356   2016-04-09  2016-04-04\n",
+       "350   2016-04-08  2016-04-04\n",
+       "296   2016-04-07  2016-04-04\n",
+       "294   2016-04-06  2016-04-04\n",
+       "283   2016-04-05  2016-04-04\n",
+       "281   2016-04-04  2016-04-04\n",
+       "302   2016-04-03  2016-03-28\n",
+       "284   2016-04-02  2016-03-28\n",
+       "282   2016-04-01  2016-03-28\n",
+       "...          ...         ...\n",
+       "1741  2015-01-30  2015-01-26\n",
+       "1747  2015-01-29  2015-01-26\n",
+       "1746  2015-01-28  2015-01-26\n",
+       "1754  2015-01-27  2015-01-26\n",
+       "1738  2015-01-26  2015-01-26\n",
+       "1743  2015-01-25  2015-01-19\n",
+       "1737  2015-01-24  2015-01-19\n",
+       "1745  2015-01-23  2015-01-19\n",
+       "1667  2015-01-22  2015-01-19\n",
+       "1673  2015-01-21  2015-01-19\n",
+       "1661  2015-01-20  2015-01-19\n",
+       "1658  2015-01-19  2015-01-19\n",
+       "1659  2015-01-18  2015-01-12\n",
+       "1665  2015-01-17  2015-01-12\n",
+       "1662  2015-01-16  2015-01-12\n",
+       "1682  2015-01-15  2015-01-12\n",
+       "1592  2015-01-14  2015-01-12\n",
+       "1596  2015-01-13  2015-01-12\n",
+       "1594  2015-01-12  2015-01-12\n",
+       "1590  2015-01-11  2015-01-05\n",
+       "1599  2015-01-10  2015-01-05\n",
+       "1591  2015-01-09  2015-01-05\n",
+       "1603  2015-01-08  2015-01-05\n",
+       "1526  2015-01-07  2015-01-05\n",
+       "1532  2015-01-06  2015-01-05\n",
+       "1540  2015-01-05  2015-01-05\n",
+       "1525  2015-01-04  2014-12-29\n",
+       "1523  2015-01-03  2014-12-29\n",
+       "1524  2015-01-02  2014-12-29\n",
+       "1527  2015-01-01  2014-12-29\n",
+       "\n",
+       "[486 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['Date','Week']]"
+    "df[['Date','Week']].drop_duplicates().sort_values(by=['Date'],ascending=False)"
    ]
   },
   {
